--- a/week5/css/main.css
+++ b/week5/css/main.css
@@ -58,7 +58,7 @@ article>p {
 /* Adiacent sibling selector */
 h3+ul {
     /* thinkness style color */
-    border: 1px solid black;
+    border: 1px solid #222;
 }
 
 a[herf="#treatofweek"]{
@@ -79,7 +79,7 @@ nav ul a:link,
 nav ul a:visited{
     background-color: orange;
     /* horizontal vertical blur spread color */
-    box-shadow: -2px 2px 4px 2px black;
+    box-shadow: -2px 2px 4px 2px #222;
 }
 
 nav ul a:hover,
@@ -89,7 +89,7 @@ nav ul a:focus{
 
 nav ul a:active{
     /* horizontal vertical blur spread color */
-    box-shadow: 0 0 4px 2px black;
+    box-shadow: 0 0 4px 2px #222;
 }
 
 /* Position related Pasudo class selectors */
