--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -138,7 +138,6 @@ table {
 
 /* Use the 'Open Sans' Google font for the webpage */
 /*Mobile Styling*/
-@media only screen and (max-width: 1200px) {
     /* For mobile phones: */
 .container{
     width: 100%;
@@ -183,6 +182,11 @@ ul {
     width: 100%;
 }
  
+li i{
+    color: #c78c06;
+    border: 1px #c78c06 solid;
+    padding: 0.5rem 1.1rem 0.5rem 1.1rem;
+}
 li a {
     display: block;
     color:  #c78c06;
@@ -203,12 +207,13 @@ li a:hover {
     width: 100%;
     font-size: 1rem;
     align-items: center;
-    padding: 10px;
+    padding: 0.5rem;
   }
   
   .f-topnav input[type=text] {
     width: 85%;
     padding: 6px;
+    padding-right: 0;
     margin-top: 8px;
     margin-left: 1.5%;
     margin-bottom: 1.5%;
@@ -217,7 +222,6 @@ li a:hover {
   }
   
   .f-topnav .search-container button {
-    float: right;
     width:10%;
     /* padding: 6px 10px; */
     margin-top: 8px;
@@ -240,9 +244,9 @@ li a:hover {
     height: 500px;
 }
 
-.backcolor{
-    box-sizing: border-box;
-    background-color: black;
+
+.f-home article{
+    background-color: rgba(0, 0, 0, 0.507);
 }
 
 
@@ -262,13 +266,15 @@ h1{
 	padding: 1rem 1rem 1rem 1rem;
 }
 
-.f-connectbutton{
+.f-connectbutton a{
     background-color:#c78c06;
 	/* top right bottom left */
-	padding: 1rem 1rem 1rem 1rem;
+	padding: 1rem 1rem 1rem 1.5rem;
 	width:fit-content;
 	text-align: center;
     text-decoration: none;
+    line-height: 3rem;
+    color: #222;
 }
 
 .f-aboutus{
@@ -287,13 +293,13 @@ h2{
    padding-left: 0.5rem;
    padding-bottom: 1.5rem;
    font-size: 2.6em; 
-   color:black;
+   color:#222;
    font-weight: bold; 
 }
 
 .f-aboutusp,
 .f-aboutusp2{
-    color:black;
+    color:#222;
     padding-left: 0.5rem;
     padding-bottom: 1.5rem;
 }
@@ -326,7 +332,7 @@ h3{
     padding-left: 0.5rem;
     padding-bottom: 0.8rem;
     font-size: 1.5em; 
-    color:black;
+    color:#222;
     font-weight: bold; 
 }
 
@@ -342,13 +348,13 @@ h3{
     padding-bottom: 1.5rem; 
 }
 
-.f-digitalbutton,
+/* .f-digitalbutton ,
 .f-marketingbutton,
 .f-videobutton,
 .f-webbutton,
 .f-printbutton{
     color:white;
-    background-color: black;
+    background-color: #222;
     font-size: 1em;
     padding: 1rem;
 	width:fit-content;
@@ -356,6 +362,30 @@ h3{
     text-decoration: none;
     margin-left: 0.5rem;
     margin-bottom: 0.5rem;
+} */
+.f-digitalbutton a,
+.f-marketingbutton a,
+.f-videobutton a,
+.f-webbutton a,
+.f-printbutton a,
+.f-learnmorebutton a{
+    background-color:#222;
+	/* top right bottom left */
+	padding: 1rem 1rem 1rem 1rem;
+	width:fit-content;
+	text-align: center;
+    text-decoration: none;
+    line-height: 3rem;
+    color:white;
+}
+
+.f-digitalbutton i,
+.f-marketingbutton i,
+.f-videobutton i,
+.f-webbutton i,
+.f-printbutton i,
+.f-learnmorebutton i{
+margin-left: 10px;
 }
 
 /* ******************************************************* */
@@ -373,7 +403,7 @@ h3{
 }
 .f-learnmorebutton{
     color:white;
-    background-color: black;
+    background-color: #222;
     font-size: 1em;
     padding: 1rem;
 	width:fit-content;
@@ -384,7 +414,7 @@ h3{
 }
 /* ********************************************************* */
 h4{
-    color:black;
+    color:#222;
     font-weight: bold; 
     padding-left: 0.5rem;
 }
@@ -436,8 +466,14 @@ h4{
     margin-left: 0.5rem;
     margin-right: 0.5rem;
 }
+
+.f-location{
+    margin: 1rem 1rem 1rem 2rem;
+    width:100%;
+}
+
 table, td, th {
-    border: 1px solid black;
+    border: 1px solid #222;
     /* top right bottom left */
 	padding: 1rem 0.5rem 0.5rem 0.5rem;
   }
@@ -464,13 +500,17 @@ table, td, th {
     padding: 1rem 1rem 0.5rem 0.5rem;
  }
     
-  }
 
 
 /****************************************************************************/
 /*Desktop Styling*/
 @media only screen and (min-width: 768px) {
     /* For desktop: */
+
+    body{
+        max-width: 1200px;
+    }
+
     .f-topnav {
         overflow: hidden;
         background-color: #222;
@@ -517,4 +557,32 @@ table, td, th {
         background: #ccc;
       }
 
+      .f-logoimg{
+
+      }
+
+      .servicespage{
+          display:grid;
+          grid-template-columns:repeat(6,1fr);
+          grid-template-rows: repeat(2,1fr);
+          grid-template-areas: 
+          "box1 box1 box1 box2 box2 box2"
+          "box3 box3 box4 box4 box5 box5"
+      } 
+
+      .servicespage .service:nth-child(1){
+          grid-area: box1;
+      }
+      .servicespage .service:nth-child(2){
+        grid-area: box2;
+    }
+    .servicespage .service:nth-child(3){
+        grid-area: box3;
+    }
+    .servicespage .service:nth-child(4){
+        grid-area: box4;
+    }
+    .servicespage .service:nth-child(5){
+        grid-area: box5;
+    }
 }
