--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -198,7 +198,7 @@ a:link,
 a:visited {
 	display: block;
 	text-decoration: none;
-	color: black;
+	color: #222;
 }
 
 h2,
@@ -263,7 +263,7 @@ p {
 .box {
 	border-style: solid;
 	border-width: 1px;
-	border-color: black;
+	border-color: #222;
 	padding: 0.5rem 1rem 0.5rem 1rem;
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
@@ -284,7 +284,7 @@ h4 {
 
 .button {
 	background: lightcyan;
-	border: 2px solid black;
+	border: 2px solid #222;
 	/* top right bottom left */
 	padding: 1rem 1rem 1rem 1rem;
 	width: max-content;
