--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -133,6 +133,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
+
 /****************************************************************************/
 /* Customers style */
 
@@ -146,7 +147,7 @@ table {
 }
 
 html{
-    font-family: "Open Sans";
+    font-family: 'Open Sans', sans-serif;
     font-size: 16px;
 }
 
