--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -129,7 +129,7 @@ aside ul li:first-child {
     font-weight: bold;
 }
 
-section ol li:last-child {
+div ol li:last-child {
     font-weight: bold;
 }
 
