--- a/week7/css/main.css
+++ b/week7/css/main.css
@@ -99,7 +99,7 @@ aside {
     display:table;
 }
 
-section {
+div {
     /* clearing the float */
     clear: both;
 }
@@ -203,7 +203,7 @@ aside ul li:first-child {
     font-weight: bold;
 }
 
-section ol li:last-child {
+div ol li:last-child {
     font-weight: bold;
 }
 
